# RAG_System

./: .env  app.py  pyproject.toml  requirements.txt
data/text_files/: machine_learning.txt  python_intro.txt
data/vector_store/: chroma.sqlite3
faiss_store/: faiss.index  metadata.pkl
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vectorstore.py
