[project]
name = "rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cache>=1.0.3",
    "chromadb>=1.5.8",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.0",
    "purge>=1.0",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.10.2",
    "sentence-transformers>=3.0.0",
    "torch",
    "transformers>=4.40.0,<5.0.0",
]
